--- a/index.html
+++ b/index.html
@@ -14,17 +14,60 @@
 </head>
 
 <body>
+    <section class="flexible-container">
+        <div class="half-width">
+            <div id="stay">
+                <h1>Stay Focused on</h1>
+                <h1><span class="coral-color">Mission 2022</span></h1>
+            </div>
+            <p class="first-paragraph">I am Md. Tufail Ahamed. I have completed my graduation in Textile Engineering and
+                Management from BGMAEA University of Fashion & Technology. After completing my graduation I worked as a
+                Junior IE Executive Iris Fabrics Ltd. During that time I realised that I have no passion for my work.
+                From that moment I
+                always try to discover a profession which I really loved. Finally I took my decision and enrolled myself
+                Programming Hero Web Development course. </p>
+            <button class="explore"> Explore Now</button>
+            <p>Scroll down to explore more about me</p>
+        </div>
+        <div class="half-width">
+            <img src="./images/person/person-3.png" alt="">
+        </div>
+    </section>
     <section>
-        <div>
-            <h1>Stay Focused on</h1>
-            <h1><span class="coral-color">Mission 2022</span></h1>
-            <p></p>
-            <button></button>
-            <p></p>
+        <h1 id="my-mission">My Mission in <span class="coral-color">2022</span></h1>
+        <div class="flexible">
+            <div class="purpose">
+                <div class="photo"><img src="images/illustrators/illustrator-3.png" alt=""></div>
+                <div>
+                    <h3>Goals</h3>
+                    <p>AS a person I am passionate about self-improvement and creating a better quality of life. I love
+                        to
+                        learn new things and feel productive. I always remember one thing in my mind, "Love life for
+                        what it
+                        is, not what you think it should be". </p>
+                </div>
+            </div>
+            <div class="purpose">
+                <div class="photo"><img src="images/illustrators/illustrator-1.png" alt=""></div>
+                <div>
+                    <h3>Mission</h3>
+                    <p>My mission is crystal clear to me. Right now my mission is properly utilized all the learning
+                        resources I have to become a full stack web developer and successfully complete the Programming
+                        Hero
+                        Web Development course </p>
+                </div>
+            </div>
+            <div class="purpose">
+                <div class="photo"><img src="images/illustrators/illustrator-2.png" alt=""></div>
+                <div>
+                    <h3>Vission</h3>
+                    <p>Even though vision is a future oriented term. At present my full concentration is on my current
+                        situation related. At long term, I want to work for a Top Tech Company like Google, Microsoft,
+                        Adobe, Amazon, Facebook as a web developer.</p>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="./images/person/person-2.png" alt="">
-        </div>
+
     </section>
 
 </body>
