--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="flexible-container">
+    <section class="flexible-container bottom-space">
         <div class="half-width">
             <div id="stay">
                 <h1>Stay Focused on</h1>
@@ -33,7 +33,7 @@
             <img src="./images/person/person-3.png" alt="">
         </div>
     </section>
-    <section>
+    <section class="bottom-space">
         <h1 id="my-mission">My Mission in <span class="coral-color">2022</span></h1>
         <div class="flexible">
             <div class="purpose">
@@ -69,6 +69,66 @@
         </div>
 
     </section>
+    <section class="flexible-container bottom-space">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width leading">
+            <h2>Leading </h2>
+            <h2>Without Limits</h2>
+            <p>From learning without limits to leading without limits: An autobiographical reflective case study of
+                leading academic development with higher education. This autobiographical case study reflects upon how a
+                senior academic leader repurposed the Learning without Limits pedagogical framework originally developed
+                within UK primary and secondary school settings to inform the development of a new transformational
+                leadership framework within a higher education setting. Kolb’s Experiential Learning Cycle is used to
+                structure an analytically self-reflective account of the leadership behaviours deployed for a
+                distributed model of academic development to be effective, viewed through the lens of Learning without
+                Limits. As a result, a new framework to inform effective approaches to the leadership of change in
+                higher education is suggested: Leading without Limits.</p>
+            <button class="explore">Read the Documentation</button>
+        </div>
+    </section>
+    <section class="flexible-container bottom-space">
+        <div class="half-width">
+            <h2>Connect with</h2>
+            <h2>Global Community</h2>
+            <p>If you want to grow as a developer, I can't over-emphasize the benefits of joining a developer community.
+                There are many advantages, from peer-programming to sharing knowledge, mentorship, sharing support,
+                sharing tools, code reviews, answering questions, and much more. Communities are usually built on shared
+                struggles of individuals learning in a particular region, and the goals of each community differ per the
+                individual's collective needs. Over the years, these developer communities have grown across the world
+                with different goals and missions but still with the general aim of providing a platform for developers
+                to learn, interact, share ideas, support each other and grow. "If you want to go quickly, go alone. If
+                you want to go far, go together." – African Proverb</p>
+            <button class="explore">Read the Documentation</button>
+        </div>
+        <div class="half-width">
+            <img class="leading" src="images/pictures/project.png" alt="">
+        </div>
+
+    </section>
+    <section class="flexible-container">
+        <div class="half-width">
+            <img src="images/pictures/about-pic.png" alt="">
+        </div>
+        <div class="half-width leading">
+            <h1>Why hire me for your next</h1>
+            <h1 class="coral-color">project?</h1>
+            <p>Currently, I am working at BDHOST71 as a Web Developer. Before that, I’ve worked at SOFT TECH, Dhaka as
+                an SEO Expert.I love to work in User Experience & User Interface designing. Because I love to solve
+                design and development problems and find easy and better solutions to solve them. I have been working on
+                Android Development...</p>
+            <a target="_blank" class="explore"
+                href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Ftufial%3Ffbclid%3DIwAR3kQ0jmZqfofQGIlYWPwjPXLKrVmPgJtVA6bxW_BiHFxIxU4_NvuY7pygo&h=AT3H8-MNMKtTUze49o5q-cXzhFoTrFLFMbihCKukMgqzxNzPVjVhKWmk2kB5AlW4jlMnSBPRGz2HbaKYaWlNSxq5l0GQX-xmoXwgqd39Z2Ph-LJSHeN-lXCe9tYUZ6-UFmrg4w">Read
+                More</a>
+        </div>
+    </section>
+    <footer class="footer">
+        <div id="my-mission">
+            <h2><span class="white"> Mission</span><span class="coral-color"> 2022</span> </h2>
+            <p> <small class="white">Hardwork, Perseverance, and Determination for 2022</small> </p>
+        </div>
+    </footer>
 
 </body>
 
