--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="purpose">
                 <div class="photo"><img src="images/illustrators/illustrator-2.png" alt=""></div>
                 <div>
-                    <h3>Vission</h3>
+                    <h3>Vision</h3>
                     <p>Even though vision is a future oriented term. At present my full concentration is on my current
                         situation related. At long term, I want to work for a Top Tech Company like Google, Microsoft,
                         Adobe, Amazon, Facebook as a web developer.</p>
